@@ -2,6 +2,8 @@
 
 Changelog for HylaFAX 4.2.0
 
+* prevent CID values from acquiring data when unset (1 Jun 2004)
+* add ModemReadyCmds config option (1 Jun 2004)
 * improve and fix several no-modem-response timeouts (31 May 2004)
 * fix an error in faxq when adding a job that had a no_formatter
   error to the sleep queue (31 May 2004)
